--- a/Readme
+++ b/Readme
@@ -15,7 +15,7 @@ tools：代码自动生成、机器人模块
 4.支持分模块加载玩家的数据
 5.玩家数据及公共数据支持多种类型的生命周期
 6.支持redis订阅接口
-7.支持服务node注册
+7.支持服务以node为节点注册,提供soa服务,node之间通过rpc请求通信
 
 
 Action类：
