--- a/Readme
+++ b/Readme
@@ -14,12 +14,12 @@ tools：代码自动生成、机器人模块
 3.在内存中维护玩家数据，异步落库，支持启动时检测数据库版本号
 4.支持分模块加载玩家的数据, 优化加载不在线玩家的数据量
 5.玩家数据及公共数据支持多种类型的生命周期
-6.支持redis订阅接口
+6.支持redis订阅/发布接口
 7.提供soa服务，支持服务器以node为节点向nacos服务中心注册，node之间通过rpc请求通信
 8.支持http和tcp两种通信模式
 9.使用时间轮定时器，支持延迟、定时间隔以及crontab表达式的定时任务
 10.支持基于protoBuf协议的RPC通信机制
-11.支持定制请求拦截器
+11.支持可扩展的请求拦截器，支持接口日志打印、权限（待实现）、限流策略（待实现）以及分布式请求追踪（待实现）功能
 12.提供了一个灵活的json构造器JsonBuilder
 13.提供了一个支持在线修改的通用配置文件读取工具Configuration
 14.提供了一个多语言工具LocalMessage，以及消息模板格式化工具MessageFormat
@@ -53,6 +53,23 @@ public class PlayerAction {
     }
 
 }
+
+redis订阅接口：
+@Action
+public class RedisAction {
+
+    @RedisCommand(CmdPb.Cmd.TopicPlayerOnline_VALUE)
+    public void onlinePlayerMessage(RedisPb.PlayerOnlinePb msg) {
+
+    }
+
+}
+
+redis发布：
+RedisPb.PlayerOnlinePb.Builder builder = RedisPb.PlayerOnlinePb.newBuilder();
+builder.setXXX
+...
+RedisUtil.publishTopic(CmdPb.Cmd.TopicPlayerOnline_VALUE, builder.build());
 
 
 定时任务：
